--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мое резюме</title>
+    <title>Cv</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,17 +28,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Мое резюме</h1>
-        <p><strong>Имя:</strong> Иванова Анна</p>
-        <p><strong>Школа:</strong> Средняя школа №123, г. Москва</p>
-        <p><strong>Класс:</strong> 10 "А"</p>
-        <p><strong>Достижения:</strong></p>
-        <ul>
-            <li>Победитель олимпиады по математике (2023 г.)</li>
-            <li>Участник научной конференции "Шаг в будущее"</li>
-            <li>Активный участник школьного театрального кружка</li>
-        </ul>
-        <p><strong>Контакты:</strong> example@email.com</p>
+        
     </div>
 </body>
 </html>
