--- a/index.html
+++ b/index.html
@@ -3,32 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cv</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        h1 {
-            color: #444;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>Anna Pennie</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#info">INFO</a></li>
+                <li><a href="#education">EDUCATION</a></li>
+                <li><a href="#work">WORK EXPERIENCE</a></li>
+                <li><a href="#skills">SKILLS</a></li>
+                <li><a href="#soft-skills">SOFT SKILLS</a></li>
+                <li><a href="#achievements">ACHIEVEMENTS & PROJECTS</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="info">
+            <h2>INFO</h2>
+            <p></p>
+        </section>
+
+        <section id="education">
+            <h2>EDUCATION</h2>
+            <p></p>
+        </section>
+
+        <section id="work">
+            <h2>WORK EXPERIENCE</h2>
+            <p></p>
+        </section>
+
+        <section id="skills">
+            <h2>SKILLS</h2>
+            <p></p>
+        </section>
+
+        <section id="soft-skills">
+            <h2>SOFT SKILLS</h2>
+            <p></p>
+        </section>
+
+        <section id="achievements">
+            <h2>ACHIEVEMENTS & PROJECTS</h2>
+            <p></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 </p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
