--- a/index.html
+++ b/index.html
@@ -23,32 +23,57 @@
     <main>
         <section id="info">
             <h2>INFO</h2>
-            <p></p>
+            <p>Email: anna.pennie04@gmail.com</p>
+            <p>Location: Helsinki, Finland</p>
+            <p>LinkedIn: </p>
+            <p>GitHub: </p>
         </section>
 
         <section id="education">
             <h2>EDUCATION</h2>
-            <p></p>
+            <p>Business College Helsinki</p>
+            <p>Field of study: Vocational qualification in Information and Communication Technology</p>
+            <p>Specialization: Game Programming</p>
+            <p>Duration: August 2023 - Present</p>
         </section>
 
         <section id="work">
             <h2>WORK EXPERIENCE</h2>
-            <p></p>
+            <p>Technical Support Intern, Power Oy</p>
+            <p>March 2024 - May 2024</p>
+            <p>Provided technical support to customers, resolving hardware and software-related
+issues</p>
+            <p>Worked with internal company systems to process service requests.</p>
+            <p>Assisted users with device setup and troubleshooting.</p>
         </section>
 
         <section id="skills">
             <h2>SKILLS</h2>
-            <p></p>
+            <p>Game Development: Unity, Unreal Engine</p>
+            <p>Programming Languages: C++, C#, Python, HTML, CSS, SQL, .NET</p>
+            <p>Game Design & UI Development</p>
+            <p>Software & Tools: Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
+            <p>Languages: Russian (Native), Finnish (Limited working proficiency), English
+(Professional working proficiency)</p>
         </section>
 
         <section id="soft-skills">
             <h2>SOFT SKILLS</h2>
-            <p></p>
+            <p>Teamwork and collaboration</p>
+            <p>Time management skills</p>
+            <p>Critical thinking</p>
+            <p>Adaptability and fast learning</p>
+            <p>Problem-solving abilities</p>
         </section>
 
         <section id="achievements">
             <h2>ACHIEVEMENTS & PROJECTS</h2>
-            <p></p>
+            <p>Completed studies one year ahead of schedule</p>
+            <p>Participant in Taitaja 2025</p>
+            <p>Team-based projects, including a game developed in a team of two within four months
+[TheWayOut]</p>
+            <p>Completed courses on Udemy and Coddy covering C++ programming, Unreal Engine,
+and 3D modeling</p>
         </section>
     </main>
 
