--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="eng">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,18 +10,18 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#info">INFO</a></li>
-                <li><a href="#education">EDUCATION</a></li>
-                <li><a href="#work">WORK EXPERIENCE</a></li>
-                <li><a href="#skills">SKILLS</a></li>
-                <li><a href="#soft-skills">SOFT SKILLS</a></li>
-                <li><a href="#achievements">ACHIEVEMENTS & PROJECTS</a></li>
+                <li><a href="#" data-section="info">INFO</a></li>
+                <li><a href="#" data-section="education">EDUCATION</a></li>
+                <li><a href="#" data-section="work">WORK EXPERIENCE</a></li>
+                <li><a href="#" data-section="skills">SKILLS</a></li>
+                <li><a href="#" data-section="soft-skills">SOFT SKILLS</a></li>
+                <li><a href="#" data-section="achievements">ACHIEVEMENTS & PROJECTS</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="info">
+       <section id="info" class="content-section">
             <h2>INFO</h2>
             <p>Email: anna.pennie04@gmail.com</p>
             <p>Location: Helsinki, Finland</p>
@@ -29,7 +29,7 @@
             <p>GitHub: </p>
         </section>
 
-        <section id="education">
+        <section id="education" class="content-section" style="display: none;">
             <h2>EDUCATION</h2>
             <p>Business College Helsinki</p>
             <p>Field of study: Vocational qualification in Information and Communication Technology</p>
@@ -37,7 +37,7 @@
             <p>Duration: August 2023 - Present</p>
         </section>
 
-        <section id="work">
+        <section id="work" class="content-section" style="display: none;">
             <h2>WORK EXPERIENCE</h2>
             <p>Technical Support Intern, Power Oy</p>
             <p>March 2024 - May 2024</p>
@@ -47,7 +47,7 @@ issues</p>
             <p>Assisted users with device setup and troubleshooting.</p>
         </section>
 
-        <section id="skills">
+        <section id="skills" class="content-section" style="display: none;">
             <h2>SKILLS</h2>
             <p>Game Development: Unity, Unreal Engine</p>
             <p>Programming Languages: C++, C#, Python, HTML, CSS, SQL, .NET</p>
@@ -57,7 +57,7 @@ issues</p>
 (Professional working proficiency)</p>
         </section>
 
-        <section id="soft-skills">
+        <section id="soft-skills" class="content-section" style="display: none;">
             <h2>SOFT SKILLS</h2>
             <p>Teamwork and collaboration</p>
             <p>Time management skills</p>
@@ -66,7 +66,7 @@ issues</p>
             <p>Problem-solving abilities</p>
         </section>
 
-        <section id="achievements">
+        <section id="achievements" class="content-section" style="display: none;">
             <h2>ACHIEVEMENTS & PROJECTS</h2>
             <p>Completed studies one year ahead of schedule</p>
             <p>Participant in Taitaja 2025</p>
