--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Pennie</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-       <section id="info" class="content-section">
+        <section id="info" class="content-section">
             <h2>INFO</h2>
             <p>Email: anna.pennie04@gmail.com</p>
             <p>Location: Helsinki, Finland</p>
@@ -42,8 +42,10 @@
             <h2>WORK EXPERIENCE</h2>
             <p>Technical Support Intern, Power Oy</p>
             <p>March 2024 - May 2024</p>
-            <p>Provided technical support to customers, resolving hardware and software-related
-issues</p>
+            <p>
+                Provided technical support to customers, resolving hardware and software-related
+                issues
+            </p>
             <p>Worked with internal company systems to process service requests.</p>
             <p>Assisted users with device setup and troubleshooting.</p>
         </section>
@@ -54,8 +56,10 @@ issues</p>
             <p>Programming Languages: C++, C#, Python, HTML, CSS, SQL, .NET</p>
             <p>Game Design & UI Development</p>
             <p>Software & Tools: Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
-            <p>Languages: Russian (Native), Finnish (Limited working proficiency), English
-(Professional working proficiency)</p>
+            <p>
+                Languages: Russian (Native), Finnish (Limited working proficiency), English
+                (Professional working proficiency)
+            </p>
         </section>
 
         <section id="soft-skills" class="content-section" style="display: none;">
@@ -71,10 +75,14 @@ issues</p>
             <h2>ACHIEVEMENTS & PROJECTS</h2>
             <p>Completed studies one year ahead of schedule</p>
             <p>Participant in Taitaja 2025</p>
-            <p>Team-based projects, including a game developed in a team of two within four months
-[TheWayOut]</p>
-            <p>Completed courses on Udemy and Coddy covering C++ programming, Unreal Engine,
-and 3D modeling</p>
+            <p>
+                Team-based projects, including a game developed in a team of two within four months
+                [TheWayOut]
+            </p>
+            <p>
+                Completed courses on Udemy and Coddy covering C++ programming, Unreal Engine,
+                and 3D modeling
+            </p>
         </section>
     </main>
 
