--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
         </section>
 
         <section id="education" class="content-section" style="display: none;">
-            <h2>EDUCATION</h2>
-            <p>Business College Helsinki</p>
+            <h2>Business College Helsinki</h2>
             <p>Field of study: Vocational qualification in Information and Communication Technology</p>
             <p>Specialization: Game Programming</p>
             <p>Duration: August 2023 - Present</p>
         </section>
 
         <section id="work" class="content-section" style="display: none;">
-            <h2>WORK EXPERIENCE</h2>
-            <p>Technical Support Intern, Power Oy</p>
+            <h2>Technical Support Intern, Power Oy</h2>
             <p>March 2024 - May 2024</p>
             <p>
                 Provided technical support to customers, resolving hardware and software-related
@@ -52,13 +50,16 @@
         </section>
 
         <section id="skills" class="content-section" style="display: none;">
-            <h2>SKILLS</h2>
-            <p>Game Development: Unity, Unreal Engine</p>
-            <p>Programming Languages: C++, C#, Python, HTML, CSS, SQL, .NET</p>
+            <h2>Game Development: </h2>
+            <p>Unity, Unreal Engine</p>
+            <h2>Programming Languages: </h2>
+            <p>C++, C#, Python, HTML, CSS, SQL, .NET</p>
             <p>Game Design & UI Development</p>
-            <p>Software & Tools: Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
+            <h2>Software & Tools: </h2>
+            <p>Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
+            <h2>Languages: </h2>
             <p>
-                Languages: Russian (Native), Finnish (Limited working proficiency), English
+                Russian (Native), Finnish (Limited working proficiency), English
                 (Professional working proficiency)
             </p>
         </section>
