--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>Unity, Unreal Engine</p>
             <h2>Programming Languages: </h2>
             <p>C++, C#, Python, HTML, CSS, SQL, .NET</p>
-            <p>Game Design & UI Development</p>
+            <h2>Game Design & UI Development</h2>
             <h2>Software & Tools: </h2>
             <p>Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
             <h2>Languages: </h2>
