--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Pennie</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Commissioner:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Commissioner:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+</head>
 <body>
     <header>
         <nav>
@@ -39,27 +40,32 @@
         <section id="work" class="content-section" style="display: none;">
             <h2>Technical Support Intern, Power Oy</h2>
             <p>March 2024 - May 2024</p>
-            <p>
-                Provided technical support to customers, resolving hardware and software-related
-                issues
-            </p>
+            <p>Provided technical support to customers, resolving hardware and software-related issues</p>
             <p>Worked with internal company systems to process service requests.</p>
             <p>Assisted users with device setup and troubleshooting.</p>
         </section>
 
         <section id="skills" class="content-section" style="display: none;">
-            <h2>Game Development: </h2>
-            <p>Unity, Unreal Engine</p>
-            <h2>Programming Languages: </h2>
-            <p>C++, C#, Python, HTML, CSS, SQL, .NET</p>
-            <h2>Game Design & UI Development</h2>
-            <h2>Software & Tools: </h2>
-            <p>Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
-            <h2>Languages: </h2>
-            <p>
-                Russian (Native), Finnish (Limited working proficiency), English
-                (Professional working proficiency)
-            </p>
+            <h2 class="skill-header">Game Development</h2>
+            <div class="skill-content">
+                <p>Unity, Unreal Engine</p>
+            </div>
+            <h2 class="skill-header">Programming Languages</h2>
+            <div class="skill-content">
+                <p>C++, C#, Python, HTML, CSS, SQL, .NET</p>
+            </div>
+            <h2 class="skill-header">Game Design & UI Development</h2>
+            <div class="skill-content">
+                <p>Game Design & UI Development</p>
+            </div>
+            <h2 class="skill-header">Software & Tools</h2>
+            <div class="skill-content">
+                <p>Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
+            </div>
+            <h2 class="skill-header">Languages</h2>
+            <div class="skill-content">
+                <p>Russian (Native), Finnish (Limited working proficiency), English (Professional working proficiency)</p>
+            </div>
         </section>
 
         <section id="soft-skills" class="content-section" style="display: none;">
@@ -75,14 +81,8 @@
             <h2>ACHIEVEMENTS & PROJECTS</h2>
             <p>Completed studies one year ahead of schedule</p>
             <p>Participant in Taitaja 2025</p>
-            <p>
-                Team-based projects, including a game developed in a team of two within four months
-                [TheWayOut]
-            </p>
-            <p>
-                Completed courses on Udemy and Coddy covering C++ programming, Unreal Engine,
-                and 3D modeling
-            </p>
+            <p>Team-based projects, including a game developed in a team of two within four months [TheWayOut]</p>
+            <p>Completed courses on Udemy and Coddy covering C++ programming, Unreal Engine, and 3D modeling</p>
         </section>
     </main>
 
