--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </section>
 
         <section id="education" class="content-section" style="display: none;">
-            <h2>Business College Helsinki</h2>
+            <h2>BUSINESS COLLEGE HELSINKI</h2>
             <p>Field of study: Vocational qualification in Information and Communication Technology</p>
             <p>Specialization: Game Programming</p>
             <p>Duration: August 2023 - Present</p>
         </section>
 
         <section id="work" class="content-section" style="display: none;">
-            <h2>Technical Support Intern, Power Oy</h2>
+            <h2>TECHNICAL SUPPORT INTERN, POWER OY</h2>
             <p>March 2024 - May 2024</p>
             <p>Provided technical support to customers, resolving hardware and software-related issues</p>
             <p>Worked with internal company systems to process service requests.</p>
@@ -46,25 +46,38 @@
         </section>
 
         <section id="skills" class="content-section" style="display: none;">
-            <h2 class="skill-header">Game Development</h2>
+            <h2 class="skill-header">GAME DEVELOPMENT</h2>
             <div class="skill-content">
-                <p>Unity, Unreal Engine</p>
+                <p>Unity</p>
+                <p>Unreal Engine</p>
             </div>
-            <h2 class="skill-header">Programming Languages</h2>
+            <h2 class="skill-header">PROGRAMMING LANGUAGES</h2>
             <div class="skill-content">
-                <p>C++, C#, Python, HTML, CSS, SQL, .NET</p>
+                <p>C++</p>
+                <p>C#</p>
+                <p>Python</p>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>SQL</p>
+                <p>.NET</p>
             </div>
-            <h2 class="skill-header">Game Design & UI Development</h2>
+            <h2 class="skill-header">GAME DESIGN & UI DEVELOPMENT</h2>
             <div class="skill-content">
                 <p>Game Design & UI Development</p>
             </div>
-            <h2 class="skill-header">Software & Tools</h2>
+            <h2 class="skill-header">SOFTWARE & TOOLS</h2>
             <div class="skill-content">
-                <p>Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
+                <p>Windows</p>
+                <p>Microsoft Office</p>
+                <p>Adobe Xd</p>
+                <p>Figma</p>
+                <p>Blender</p>
             </div>
-            <h2 class="skill-header">Languages</h2>
+            <h2 class="skill-header">LANGUAGES</h2>
             <div class="skill-content">
-                <p>Russian (Native), Finnish (Limited working proficiency), English (Professional working proficiency)</p>
+                <p>Russian (Native)</p>
+                <p>Finnish (Limited working proficiency)</p>
+                <p>English (Professional working proficiency)</p>
             </div>
         </section>
 
