--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         }
     </script>
 
+    <script src="
+https://cdn.jsdelivr.net/npm/three-fbx-loader@1.0.3/index.min.js
+"></script>
+
     <script src="script.js"></script>
 </head>
 <body>
