--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <script type="module">
         import * as THREE from 'three';
         import { FBXLoader } from 'three/addons/loaders/FBXLoader.js';
-        import TGALoader from 'https://cdn.jsdelivr.net/npm/three@v0.174.0/examples/jsm/loaders/TGALoader.js';
+        import { TGALoader } from 'https://cdn.jsdelivr.net/npm/three@v0.174.0/examples/jsm/loaders/TGALoader.js';
 
         // Контейнер для 3D-модели
         const container = document.getElementById('3d-container');
@@ -128,15 +128,15 @@
 
         // Загрузка 3D-модели в формате .fbx
         const loader = new FBXLoader();
-        loader.setPath('character.fbx'); // Укажите путь к вашей модели и текстурам
+        loader.setPath('./'); // Указываем, что модель и текстуры находятся в той же папке, что и HTML-файл
 
         // Добавляем TGALoader для поддержки .tga
         const tgaLoader = new TGALoader();
-        loader.setTexturePath('T_Monk_BaseColor.tga'); // Укажите путь к текстурам
+        loader.setTexturePath('./'); // Указываем, что текстуры находятся в той же папке
         loader.setResourceLoader(tgaLoader);
 
         loader.load(
-            'character.fbx', // Имя вашей модели
+            'character.fbx', // Имя файла модели
             function (fbx) {
                 const model = fbx;
                 scene.add(model); // Добавляем модель на сцену
