--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Pennie</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Commissioner:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <script type="importmap">
-        {
-          "imports": {
-            "three": "https://cdn.jsdelivr.net/npm/three@v0.174.0/build/three.module.js",
-            "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.174.0/examples/jsm/"
-          }
-        }
-    </script>
 </head>
 <body>
     <header>
@@ -28,7 +20,6 @@
             </ul>
         </nav>
     </header>
-
 
     <main>
         <section id="info" class="content-section">
@@ -95,127 +86,6 @@
         </section>
     </main>
 
-    <!-- Контейнер для 3D-модели -->
-    <div id="3d-container" style="position: fixed; top: 0; right: 0; width: 50%; height: 100vh;"></div>
-
-    <script type="module">
-        import * as THREE from 'three';
-        import { FBXLoader } from 'three/addons/loaders/FBXLoader.js';
-        import { TGALoader } from 'https://cdn.jsdelivr.net/npm/three@v0.174.0/examples/jsm/loaders/TGALoader.js';
-
-        // Контейнер для 3D-модели
-        const container = document.getElementById('3d-container');
-
-        // Сцена
-        const scene = new THREE.Scene();
-
-        // Камера
-        const camera = new THREE.PerspectiveCamera(75, container.clientWidth / container.clientHeight, 0.1, 1000);
-        camera.position.set(0, 0, 5); // Позиция камеры
-
-        // Рендерер
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setSize(container.clientWidth, container.clientHeight);
-        container.appendChild(renderer.domElement);
-
-        // Освещение
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
-        scene.add(ambientLight);
-
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
-        directionalLight.position.set(1, 1, 1);
-        scene.add(directionalLight);
-
-        // Загрузка 3D-модели в формате .fbx
-        const loader = new FBXLoader();
-        loader.setPath('./'); // Указываем, что модель и текстуры находятся в той же папке, что и HTML-файл
-
-        // Добавляем TGALoader для поддержки .tga
-        const tgaLoader = new TGALoader();
-        loader.setTexturePath('./'); // Указываем, что текстуры находятся в той же папке
-        loader.setResourceLoader(tgaLoader);
-
-        loader.load(
-            'character.fbx', // Имя файла модели
-            function (fbx) {
-                const model = fbx;
-                scene.add(model); // Добавляем модель на сцену
-            },
-            undefined,
-            function (error) {
-                console.error('Ошибка загрузки модели:', error);
-            }
-        );
-
-        // Анимация
-        function animate() {
-            requestAnimationFrame(animate);
-            renderer.render(scene, camera);
-        }
-        animate();
-
-        // Обработка изменения размера окна
-        window.addEventListener('resize', () => {
-            const width = container.clientWidth;
-            const height = container.clientHeight;
-            renderer.setSize(width, height);
-            camera.aspect = width / height;
-            camera.updateProjectionMatrix();
-        });
-    </script>
-
-    <script>
-        // Функция для переключения разделов
-        function showSection(sectionId) {
-            // Скрываем все разделы
-            document.querySelectorAll('.content-section').forEach(section => {
-                section.style.display = 'none';
-            });
-
-            // Показываем выбранный раздел
-            const activeSection = document.getElementById(sectionId);
-            if (activeSection) {
-                activeSection.style.display = 'block';
-            }
-
-            // Убираем активный класс у всех кнопок
-            document.querySelectorAll('nav ul li a').forEach(link => {
-                link.classList.remove('active');
-            });
-
-            // Добавляем активный класс к выбранной кнопке
-            const activeLink = document.querySelector(`nav ul li a[data-section="${sectionId}"]`);
-            if (activeLink) {
-                activeLink.classList.add('active');
-            }
-
-            // Если активен раздел Skills, скрываем весь контент по умолчанию
-            if (sectionId === 'skills') {
-                document.querySelectorAll('.skill-content').forEach(content => {
-                    content.classList.remove('active');
-                });
-            }
-        }
-
-        // Обработчик кликов по кнопкам навигации
-        document.querySelectorAll('nav ul li a').forEach(link => {
-            link.addEventListener('click', function (e) {
-                e.preventDefault(); // Отменяем стандартное поведение ссылки
-                const sectionId = this.getAttribute('data-section'); // Получаем ID раздела
-                showSection(sectionId); // Показываем выбранный раздел
-            });
-        });
-
-        // Обработчик кликов по заголовкам в Skills
-        document.querySelectorAll('.skill-header').forEach(header => {
-            header.addEventListener('click', function () {
-                const content = this.nextElementSibling; // Находим следующий элемент (контент)
-                content.classList.toggle('active'); // Переключаем видимость контента
-            });
-        });
-
-        // По умолчанию показываем раздел INFO
-        showSection('info');
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
