--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
-
     <!-- Контейнер для картинки -->
-    <div id="image-container" style="position: fixed; top: 0; right: 0; width: 50%; height: 100vh; overflow: hidden;">
-        <img src="model.png" alt="3D Model" style="width: 100%; height: 100%; object-fit: cover;">
+    <div id="image-container">
+        <img src="model.png" alt="3D Model">
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
