--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         <section id="skills" class="content-section" style="display: none;">
             <h2 class="skill-header">GAME DEVELOPMENT</h2>
             <div class="skill-content">
-                <p>Unity, Unreal Engine</p>
+                <p>
+                    Unity: Proficient in Unity, currently studying it as part of my study at Business College Helsinki. Most of my projects to date have been developed using Unity, demonstrating a strong familiarity with its features and workflows.
+                </p>
+                <p>Unreal Engine: Self-taught in Unreal Engine, supplemented by courses on Udemy. Currently at an intermediate level, with a solid understanding of its C++ scripting and development environment.</p>
             </div>
             <h2 class="skill-header">PROGRAMMING LANGUAGES</h2>
             <div class="skill-content">
