--- a/index.html
+++ b/index.html
@@ -48,26 +48,37 @@
         <section id="skills" class="content-section" style="display: none;">
             <h2 class="skill-header">GAME DEVELOPMENT</h2>
             <div class="skill-content">
-                <p>
-                    Unity: Proficient in Unity, currently studying it as part of my study at Business College Helsinki. Most of my projects to date have been developed using Unity, demonstrating a strong familiarity with its features and workflows.
-                </p>
-                <p>Unreal Engine: Self-taught in Unreal Engine, supplemented by courses on Udemy. Currently at an intermediate level, with a solid understanding of its C++ scripting and development environment.</p>
+                <p><b>Unity:</b> Proficient in Unity, currently studying it as part of my study at Business College Helsinki. Most of my projects to date have been developed using Unity, demonstrating a strong familiarity with its features and workflows.</p>
+                <p><b>Unreal Engine:</b> Self-taught in Unreal Engine, supplemented by courses on Udemy. Currently at an intermediate level, with a solid understanding of its C++ scripting and development environment.</p>
             </div>
             <h2 class="skill-header">PROGRAMMING LANGUAGES</h2>
             <div class="skill-content">
-                <p>C++, C#, Python, HTML, CSS, SQL, .NET</p>
+                <p>C++ - Begginer</p>
+                <p>C# - Intermediate/Advanced</p>
+                <p>Python - Begginer</p>
+                <p>HTML - Intermediate</p>
+                <p>CSS - Intermediate</p>
+                <p>SQL - Begginer</p>
+                <p>.NET - Intermediate </p>
             </div>
             <h2 class="skill-header">GAME DESIGN & UI DEVELOPMENT</h2>
             <div class="skill-content">
-                <p>Game Design & UI Development</p>
+                <p>Game Design: Expertise in level design, gameplay mechanics, and player engagement strategies.</p>
+                <p>UI/UX Development: Skilled in creating visually appealing and functional interfaces for games. Experienced with Adobe XD, Figma, and Unity UI.</p>
             </div>
             <h2 class="skill-header">SOFTWARE & TOOLS</h2>
             <div class="skill-content">
-                <p>Windows, Microsoft Office, Adobe Xd, Figma, Blender</p>
+                <p>Windows</p>
+                <p>Microsoft Office</p>
+                <p>Adobe Xd</p>
+                <p>Figma</p>
+                <p>Blender</p>
             </div>
             <h2 class="skill-header">LANGUAGES</h2>
             <div class="skill-content">
-                <p>Russian (Native), Finnish (Limited working proficiency), English (Professional working proficiency)</p>
+                <p>Russian (Native)</p>
+                <p>Finnish (Limited working proficiency)</p>
+                <p>English (Professional working proficiency)</p>
             </div>
         </section>
 
@@ -84,12 +95,11 @@
             <h2>ACHIEVEMENTS & PROJECTS</h2>
             <p>Completed studies one year ahead of schedule</p>
             <p>Participant in Taitaja 2025</p>
-            <p>Team-based projects, including a game developed in a team of two within four months [TheWayOut]</p>
+            <p>Team-based projects, including a game developed in a team of two within four months <a href="https://samupaju.itch.io/the-way-out" target="_blank" rel="noopener noreferrer">[TheWayOut]</a></p>
             <p>Completed courses on Udemy and Coddy covering C++ programming, Unreal Engine, and 3D modeling</p>
         </section>
     </main>
 
-    <!-- Контейнер для картинки -->
     <div id="image-container">
         <img src="model.png" alt="3D Model">
     </div>
