--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             </div>
             <h2 class="skill-header">PROGRAMMING LANGUAGES</h2>
             <div class="skill-content">
-                <p>C++ - Begginer</p>
-                <p>C# - Intermediate/Advanced</p>
-                <p>Python - Begginer</p>
-                <p>HTML - Intermediate</p>
-                <p>CSS - Intermediate</p>
-                <p>SQL - Begginer</p>
-                <p>.NET - Intermediate </p>
+                <p><b>C++</b> - Begginer/Intermediate</p>
+                <p><b>C#</b> - Intermediate/Advanced</p>
+                <p><b>Python</b> - Begginer</p>
+                <p><b>HTML</b> - Intermediate</p>
+                <p><b>CSS</b> - Intermediate</p>
+                <p><b>SQL</b> - Begginer</p>
+                <p><b>.NET</b> - Intermediate </p>
             </div>
             <h2 class="skill-header">GAME DESIGN & UI DEVELOPMENT</h2>
             <div class="skill-content">
-                <p>Game Design: Expertise in level design, gameplay mechanics, and player engagement strategies.</p>
-                <p>UI/UX Development: Skilled in creating visually appealing and functional interfaces for games. Experienced with Adobe XD, Figma, and Unity UI.</p>
+                <p><b>Game Design:</b> Expertise in level design, gameplay mechanics, and player engagement strategies.</p>
+                <p><b>UI/UX Development:</b> Skilled in creating visually appealing and functional interfaces for games. Experienced with Adobe XD, Figma, and Unity UI.</p>
             </div>
             <h2 class="skill-header">SOFTWARE & TOOLS</h2>
             <div class="skill-content">
