--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div id="image-container">
         <img src="model.png" alt="3D Model">
     </div>
-    <canvas id="smokeCanvas"></canvas>
+    <canvas id="myCanvas" height="200" width="800"></canvas>
     <script src="script.js"></script>
 
 
