--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <h2 class="skill-header">PROGRAMMING LANGUAGES</h2>
             <div class="skill-content">
-                <p><b>C++</b> - Begginer/Intermediate</p>
+                <p><b>C++</b> - Intermediate</p>
                 <p><b>C#</b> - Intermediate/Advanced</p>
                 <p><b>Python</b> - Begginer</p>
                 <p><b>HTML</b> - Intermediate</p>
