Mobile version warning

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
     </div>
     <canvas id="myCanvas" height="200" width="800"></canvas>
     <script src="script.js"></script>
-
+    <div id="mobile-message" style="display: none;">
+        <p>The mobile version of the website is under development. Please open the website on a computer.</p>
+    </div>
 
 </body>
 </html>
