--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
         </section>
 
         <section id="work" class="content-section" style="display: none;">
+            <h2>Game Programmer Intern – Varattu Valo Oy</h2>
+            <p>March 31, 2025 – July 31, 2025</p>
+            <p>Contributed to the development of a cooperative multiplayer game.</p>
+            <p>Programmed AI enemy behavior using Unreal Engine 5 Blueprints.</p>
+            <p>Handled bug fixing, system testing, and gameplay refinement.</p>
+            <p>Worked with AI perception systems, blackboard logic, and data structures </p>
             <h2>TECHNICAL SUPPORT INTERN, POWER OY</h2>
             <p>March 2024 - May 2024</p>
-            <p>Provided technical support to customers, resolving hardware and software-related issues</p>
+            <p>Provided technical support to customers, resolving hardware and software-related issues.</p>
             <p>Worked with internal company systems to process service requests.</p>
             <p>Assisted users with device setup and troubleshooting.</p>
         </section>
